--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,29 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include("header") -%>
 
-  <h1><%= kindOfDay %></h1>
+  <div class="box" id="heading">
+    <h1><%= kindOfDay %></h1>
+  </div>
 
-  <ul>
-    <% for(var i = 0; i<newListItems.length; i++){ %>
-        <li><%= newListItems[i] %></li>
-    <% } %>
-  </ul>
+  <div class="box">
+    
+      <% for(var i = 0; i<newListItems.length; i++){ %>
+        <div class="item">
+          <input type="checkbox">
+          <p><%= newListItems[i] %></p>
+        </div>
+          
+      <% } %>
 
-  <form class="" action="/" method="POST">
-    <input type="text" name="newItem" placeholder="new list">
-    <button type="submit" name="button">Add</button>
-  </form>
+
+      <form class="" action="/" method="POST">
+        <input type="text" name="newItem" placeholder="new item" autocomplete="off">
+        <button type="submit" name="button">+</button>
+      </form>
+    
+  </div>
+
+  <%- include("footer") -%>
+
+  
+
+
+  
 
 
     
 
     
-</body>
-</html>
